client/vite-project/src/components/add-quote/AddQuote.module.scss
:root {
    --error: rgb(204, 64, 64);
    --success: rgb(44, 167, 44);
    --warning: rgb(255, 205, 112);
}

.add__form__container {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    // TODO; red about min max, as it may be useful for heading in regards to responsiveness
    grid-template-rows: 250px max-content 200px;
}

.add__form__text {
    grid-row: 1 / 2;
    grid-column: 2 / 3;
    justify-items: center;

    &__heading {
        font-size: 4rem;
        font-weight: 400;
        margin-bottom: 0;

        &::after {
            content: '.';
            color: red;
            font-weight: bold;
        }

        &::first-letter {
            font-size: 5rem;
            font-weight: bold;
        }
    }

    &__subheading {
        font-size: 1.2rem;
        font-weight: 300;
        bottom: 0;
    }
}

.add__form {
    grid-row: 2 / 3;
    grid-column: 2 / 3;

    &__form__data {
        display: grid;
        gap: .2rem;
    }

    &__label {
        font-size: .9rem;
        color: rgb(78, 78, 78);
        text-align: left;
        padding: .3rem 0;
    }

    &__input,
    &__textarea,
    &__select {
        padding: .5rem;
        border-radius: .7rem;
        outline: none;
        border: none;
        background-color: rgb(248, 248, 248);
    }

    &__textarea {
        min-height: 6rem;
        resize: vertical;
    }

    &__input:user-invalid,
    &__textarea:user-invalid,
    &__select:user-invalid {
        outline: 2px solid var(--error);
    }

    &__input:user-valid,
    &__textarea:user-valid,
    &__select:user-valid {
        outline: 2px solid var(--success);
    }

    &__input:focus,
    &__textarea:focus,
    &__select:focus {
        outline: 2px solid var(--warning);
    }

    &__button {
        all: unset;
        font-size: .8rem;
        padding: .5rem 1.5rem;
        margin-top: .5rem;
        background-color: rgb(48, 48, 48);
        color: rgb(231, 231, 231);
        border-radius: .5rem;
        transition: background-color .3s;
        cursor: pointer;

        &:hover {
            background-color: rgb(245, 245, 245);
            color: black;
        }
    }
}

.add__form__loader__container {
    grid-row: 2 / 3;
    grid-column: 2 / 3;
    width: 100%;
    justify-self: center;
    align-self: center;
}

.add__form__toaster__container {
    grid-row: 3 / 4;
    grid-column: 2 / 3;
    align-self: center;
}

.add__form__success__modal__container {
    grid-row: 2 / 3;
    grid-column: 2 / 3;
}

